--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,9 @@
-dash_html_components==1.0.2
-plotly==4.4.1
-dash_daq==0.3.3
-dash_table==4.6.0
-pyproj==1.9.6
-dash==1.9.0
-OpenDSSDirect.py==0.3.7
-pandas==0.24.2
-numpy==1.16.4
-matplotlib==3.1.0
-dash_core_components==1.8.0
-networkx==2.3
+OpenDSSDirect.py
+pyyaml
+pydantic
+networkx
+pandas
+tinydb
+matplotlib
+dash
+click
