--- a/emerge/api/config.json
+++ b/emerge/api/config.json
@@ -1,7 +1,9 @@
 {
-    "snapshot_metrics_db": "C:/Users/KDUWADI/Desktop/NREL_Projects/Tunishia/db.json",
-    "timeseries_metrics_db": "C:/Users/KDUWADI/Desktop/NREL_Projects/Tunishia/db_metrics.json",
-    "geojson_path": "C:/Users/KDUWADI/Desktop/NREL_Projects/Tunishia/output_geojson",
-    "scenario_metrics_db": "C:/Users/KDUWADI/Desktop/NREL_Projects/Tunishia/scenario_metrics",
+    "snapshot_metrics_db": "input/db.json",
+    "timeseries_metrics_db": "input/db_metrics.json",
+    "geojson_path": "input/output_geojson",
+    "scenario_metrics_db": "input/scenario_metrics_new",
+    "scenario_metrics_vvar": "input/scenario_metrics_vvar",
+    "scenario_metrics_vvar_nighttime": "input/scenario_metrics_nighttime_off",
     "ui_url": "http://localhost:3001"
 }
