--- a/emerge/cli/config.yaml
+++ b/emerge/cli/config.yaml
@@ -5,7 +5,7 @@ profile_start: "2018-01-01 00:00:00"
 export_path: './metrics'
 resolution_min: 60
 multi_scenario: 
-  scenario_folder: ./scenarios/hp006
+  scenario_folder: ./scenarios
   num_core: 2
   pv_profile_shape: 'pvshape'
 metrics:
