--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -57,7 +57,12 @@ markdown_extensions:
 nav:
   - Welcome: index.md
   - Tutorials: 
-    - Getting started: getting_started.md
+    - Getting started (Needs Updating): getting_started.md
+    - Developing Scenarios: developing-scenarios.md
   - How to Guides: how-to-guides.md
-  - References: reference.md
+  - References: 
+    - DER Scenario : der-scenario.md
+    - Scenario Data Models: scenario-data-model.md
+    - DER Scenario Sizing Strategy: sizing-strategy.md
+    - DER Scenario Selection Strategy: selection-strategy.md
   - Guide to Developers: developers-guide.md
