updated feeder_geojson parsing. Fixed nested properties for assets other than bus. Allowed for export of single feeder geojson file, in addition to asset geojson files.

--- a/.gitignore
+++ b/.gitignore
@@ -110,4 +110,11 @@ dmypy.json
 # Pyre type checker
 .pyre/
 
+
+#Any virtual Envs
+/VENV
+
+#MacOS temps
+*.DS_Store
+
 # End of https://www.gitignore.io/api/python
