--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -57,8 +57,9 @@ markdown_extensions:
 nav:
   - Welcome: index.md
   - Tutorials: 
-    - Getting started (Needs Updating): getting_started.md
+    - Getting Started (Needs Updating): getting_started.md
     - Developing Scenarios: developing-scenarios.md
+    - Running Timeseries Simulation: tutorials/timeseries-simulation.md
   - How to Guides: how-to-guides.md
   - References: 
     - DER Scenario : der-scenario.md
