--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,7 +44,9 @@ dependencies = [
     "pyyaml",
     "tinydb",
     "uvicorn[standard]",
-    "sqlmodel"
+    "sqlmodel",
+    "psutil",
+    "loguru"
 ]
 
 [project.optional-dependencies]
