updated the src directory for ruff lint

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -28,6 +28,6 @@ jobs:
     steps:
       - uses: davidslusser/actions_python_ruff@v1.0.0
         with:
-          src: "src"
+          src: "emerge"
           pip_install_command: "pip install -e .[dev]"
           python_version: "3.11"
