--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -15,5 +15,16 @@ jobs:
       id-token: write
     steps:
         # retrieve your distributions here
+      - uses: actions/checkout@v4
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: 3.11
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          python -m pip install build
+          pip install setuptools wheel twine
+        
       - name: Publish package distributions to PyPI
         uses: pypa/gh-action-pypi-publish@release/v1
